--- a/Rest_Class/package.json
+++ b/Rest_Class/package.json
@@ -10,8 +10,10 @@
   "author": "Babu Nair",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "uuid": "^9.0.1"
   }
 }
